# coasv

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  Dockerfile.caddy  README.md  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  env.dev  manage.py  pyproject.toml  requirements.txt  sample_env_vars  tests
coas_view/: asgi.py  settings.py  urls.py  wsgi.py
common/decorators/: superuser_required.py
common/templates/: common_base.html
data_entry/: admin.py  apps.py  forms.py  tests.py  urls.py  views.py
fstatements/: apps.py  forms.py  tests.py  urls.py  utils.py  views.py
functional_tests/: test_assets.py  test_general_journal.py  test_general_ledger.py  test_ledger.py  test_liabilities_ledger.py  test_purchase_ledger.py  test_sales_ledger.py  tests.py
inventory/: admin.py  forms.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_sale_transaction.py  0003_sale_is_reverted_sale_original_sale_and_more.py  0004_alter_sale_transaction.py
jstoolchain/: input.css  package-lock.json  package.json  tailwind.config.js
ledgers/: tests.py  urls.py  utils.py  views.py
ledgers/tests/: test_utils.py  test_views.py
loan_management/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
loan_management/migrations/: 0001_initial.py  0002_loan_minimum_payment.py  0003_alter_interestpayment_payment_date_and_more.py  0004_remove_loan_end_at_remove_loan_payment_frequency_and_more.py  0005_alter_interestpayment_id_alter_loan_id_and_more.py  (+10 more)
scripts/: insert-accounts.py  insert-transactions.py
(+27 files in other folders)
