[project]
name = "coasv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-coasc>=0.1.2",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.7",
]
