[project]
name = "coasv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.2.7",
  "django-coasc>=0.1.2",
  "gunicorn>=23.0.0",
  "psycopg2>=2.9.11",
]

[dependency-groups]
dev = [
  "django-stubs[compatible-mypy]>=5.2.7",
]

# MyPy
[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict_optional = true
ignore_missing_imports = true
exclude = [".venv"]

[tool.django-stubs]
django_settings_module = "coas_view.settings"

# basedPyright
[tool.basedpyright]
typeCheckingMode = "off"
basedpyright.disableOrganizeImports = true

# Ruff (Linter & Formatter)
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
